/*
 * Copyright (c) 2015, Formation Data Systems, Inc. All Rights Reserved.
 */
package com.formationds.om.webkit.rest.v08.platform;

import java.io.InputStreamReader;
import java.util.Map;
import java.util.ArrayList;
import java.util.List;

import javax.servlet.http.HttpServletResponse;

import org.eclipse.jetty.server.Request;
import org.apache.logging.log4j.Logger;
import org.apache.logging.log4j.LogManager;

import com.formationds.client.v08.model.Node;
import com.formationds.client.v08.model.Service;
import com.formationds.client.v08.model.ServiceType;
import com.formationds.client.v08.converters.PlatformModelConverter;
import com.formationds.commons.model.helper.ObjectModelHelper;
import com.formationds.om.events.EventManager;
import com.formationds.om.events.OmEvents;
import com.formationds.om.helper.SingletonConfigAPI;
import com.formationds.protocol.pm.NotifyStopServiceMsg;
import com.formationds.protocol.pm.NotifyStartServiceMsg;
import com.formationds.protocol.svc.types.SvcInfo;
import com.formationds.protocol.ErrorCode;
import com.formationds.protocol.ApiException;
import com.formationds.util.thrift.ConfigurationApi;
import com.formationds.web.toolkit.RequestHandler;
import com.formationds.web.toolkit.Resource;
import com.formationds.web.toolkit.TextResource;

public class MutateNode implements RequestHandler {

    private static final String NODE_ARG = "node_id";

    private static final Logger logger =
            LogManager.getLogger( AddNode.class );

    private ConfigurationApi configApi;

    public MutateNode(){}

    @Override
    public Resource handle(Request request, Map<String, String> routeParameters)
            throws Exception {

        Long nodeUuid = requiredLong(routeParameters, NODE_ARG );

        Node node = null;
        try ( final InputStreamReader reader = new InputStreamReader( request.getInputStream(), "UTF-8" ) ) {
            node = ObjectModelHelper.toObject( reader, Node.class );
        }
        Boolean stopNodeServices = false;

        switch( node.getState() ){
            case DOWN:
                stopNodeServices = true;
                break;
            case UP:
            default:
                stopNodeServices = false;
                break;
        }

        List<SvcInfo> svcInfList = new ArrayList<SvcInfo>();
        boolean pmPresent = false;

        // Get the real node object so we can access other data related to it
        Node newNode = (new GetNode()).getNode(nodeUuid);

        for(List<Service> svcList : newNode.getServices().values())
        {
            for(Service svc : svcList)
            {
                SvcInfo svcInfo = PlatformModelConverter.convertServiceToSvcInfoType
                        (newNode.getAddress().getHostAddress(), svc);
                svcInfList.add(svcInfo);

                if (svc.getType() == ServiceType.PM) {
                    pmPresent = true;
                }

            }
        }

        if (!pmPresent)
        {
            Service pmSvc = (new GetService()).getService(nodeUuid, nodeUuid);
            SvcInfo svcInfo = PlatformModelConverter.convertServiceToSvcInfoType
                    (newNode.getAddress().getHostAddress(), pmSvc);
            svcInfList.add(svcInfo);
        }

        int status = -1;

        if ( stopNodeServices )
        {
            logger.debug("Request to shutdown node, uuid:" + nodeUuid);
            // Note: This action will *not* change the state of the node to "down"
            // It will however shutdown any existing am/dm/sm services on the node
            status = getConfigApi().StopService(new NotifyStopServiceMsg(svcInfList, true));

            if( status != 0 )
            {
                status= HttpServletResponse.SC_BAD_REQUEST;
                EventManager.notifyEvent( OmEvents.CHANGE_NODE_STATE_FAILED,
                                          nodeUuid );
                throw new ApiException( "Error encountered while shutting down node: "
                        + nodeUuid , ErrorCode.INTERNAL_SERVER_ERROR );
            }
            else
            {
                EventManager.notifyEvent( OmEvents.STOP_NODE, nodeUuid );
            }
        }
        else
        {
            logger.debug("Request to start node, uuid:" + nodeUuid);
            status = getConfigApi().StartService(new NotifyStartServiceMsg(svcInfList, true));

            if( status != 0 )
            {
                status= HttpServletResponse.SC_BAD_REQUEST;
                EventManager.notifyEvent( OmEvents.CHANGE_NODE_STATE_FAILED,
                                          nodeUuid );
                throw new ApiException( "Error encountered while starting node: "
                        + nodeUuid , ErrorCode.INTERNAL_SERVER_ERROR );
            }
            else
            {
                EventManager.notifyEvent( OmEvents.START_NODE, nodeUuid );
            }
        }

        String jsonString = ObjectModelHelper.toJSON( newNode );

        return new TextResource( jsonString );
    }

    private ConfigurationApi getConfigApi(){

        if ( configApi == null ){
            configApi = SingletonConfigAPI.instance().api();
        }

        return configApi;
    }

}
